# git_warden

./: .env.example  .gitignore  01 PRD.docx  03 bash scanner.docx  04 gitlab gitea expansion.docx  05 orchestration layer.docx  Makefile  README.md  gw.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml  dependency-review.yml  run.yml
config/: malware_signatures.json  redteam_tools.json  seed_actors.json  settings.yaml  trigger.yaml
data/: git_warden.sqlite-shm
docs/: 02 github scanning layer.docx  Campaign Report 2026-07-21 folderOpen Vercel Droppers.docx  IMPLEMENTATION.md  campaign-folderopen-vercel.md  huggingface-recovery-codes.txt  submit.md
src/git_warden/: __init__.py  actors.py  artifacts.py  attribution.py  cli.py  config.py  containers.py  correlate.py  dprk.py  enums.py  env.py  hunt.py  logging_setup.py  (+9 more)
tests/: conftest.py  test_actor_search.py  test_actors.py  test_artifacts_db.py  test_attribution.py  test_bash_scanner.py  test_containers.py  test_correlate.py  test_dashboard.py  test_db.py  test_discovery.py  test_domain_ioc_guard.py  test_dprk.py  test_enrichment.py  test_env.py  test_feeds.py  test_findings.py  test_findings_artifacts.py  test_github.py  test_hunt.py  test_ioc.py  test_learn.py  test_lineage.py  test_mitre.py  test_models.py  test_newsdiscovery.py  test_notify.py  test_orchestration.py  test_osm.py  test_osm_submit.py  test_osv.py  test_package_resolver.py  test_pipeline.py  test_precision_fixtures.py  test_redteam.py  test_screening.py  test_search_telemetry.py  test_signatures.py  test_supplychain_scan.py  test_tier2.py  (+1 more)
(+61 files in other folders)
