[project]
name = "git-warden"
version = "0.1.0"
description = "Cross-platform malicious repository intelligence engine (defensive threat intelligence)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Tim Burns" }]

dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pandas>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",   # ASGI server for `make serve` (the telemetry dashboard)
]

[project.scripts]
git-warden = "git_warden.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
git_warden = ["db/*.sql", "dashboard/static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Precision fixtures are intentional malicious/attack-code SAMPLES (test data, not
# real code) -- linting them flags the very patterns they exist to represent.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
